# Doctor-s-Helper

./: DEPLOYMENT_GUIDE.md  MCP_SERVER_OVERVIEW.md  README.md  Server_Agent_Plan.md  deploy-railway.sh
ai-assited-healthcare/: .gitignore  README.md  package.json  resources.py  test-mcp.sh  test_real_patient.py
ai-assited-healthcare-mcp/: .dockerignore  .env.docker.example  Dockerfile  README.md  analytics_tools.py  assessment_tools.py  config.py  docker-compose.yml  enhanced_assessment_tools.py  health_check.py  logging_config.py  main.py  models.py  motivation_tools.py  nginx.conf  pagination_caching.py  pyproject.toml  pytest.ini  requirements.txt  substance_tools.py
ai-assited-healthcare-mcp/scripts/: start-mcp-server.sh
ai-assited-healthcare-mcp/src/app/api/chat/: route.ts
ai-assited-healthcare-mcp/src/components/: chat-interface.tsx
ai-assited-healthcare-mcp/tests/: conftest.py
ai-assited-healthcare-mcp/tests/integration/: test_database_operations.py
ai-assited-healthcare-mcp/tests/unit/: test_health_check.py  test_models.py
ai-assited-healthcare/src/lib/: mcp-client.ts
ai-assited-healthcare/src/pages/: test-mcp.tsx
healthcare-dashboard/: DEBUGGING_GUIDE.md  LightHouseReport_1.html  OPENAI_SETUP.md  PHP_SETUP_GUIDE.md  backend-performance-analysis.md  database-indexes.sql  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  test-trend-analysis.js
healthcare-dashboard/scripts/: setup-supabase-integration.sh  start-both-servers.sh  start-mcp-server.sh
healthcare-dashboard/src/app/: globals.css  layout.tsx  page.tsx
(+53 files in other folders)
