[project]
name = "ai-assited-healthcare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.2",
    "pandas>=2.3.1",
    "supabase>=2.16.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]
